--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,8 +8,8 @@
 <body class="home_page">
     <h1 class="home_title">Company Database</h1>
     <div class="button-container">
-        <a href="{{ url_for('main.login') }}" class="button">Login</a>
-        <a href="{{ url_for('main.create_account') }}" class="button">Create Account</a>
+        <a href="{{ url_for('main.login_page') }}" class="button">Login</a>
+        <a href="{{ url_for('main.create_account_page') }}" class="button">Create Account</a>
     </div>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
