--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,6 +19,10 @@
             <br>
             
             <a onclick="event.preventDefault(); this.closest('form').submit();" class="button">Log In</a>
+
+            <br>
+
+            <a href="{{ url_for('main.home') }}" class="button">Cancel</a>
         </div>
     </form>
 
