--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,6 @@
+/*----------------------------------*/
+/* Home Page Styles */
+/*----------------------------------*/
 .home_page {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -38,3 +41,291 @@
 .button:hover {
     background-color: #0056b3;
 }
+
+/*----------------------------------*/
+/* General Form Style */
+/*----------------------------------*/
+
+form {
+    display: contents;
+}
+
+/*----------------------------------*/
+/* Search Page Styles */
+/*----------------------------------*/
+
+.search_page {
+    background-color: #027DFD;
+    margin: 0;
+    padding: 0;
+}
+
+.search_header_div {
+    background-color: #042B59;
+    padding: 10px;
+    color: white;
+    text-align: left;
+    border-bottom: 8px solid white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search_header {
+    margin: 0;
+    font-size: 36px;
+}
+
+.nav_button_group {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    gap: 10px;
+}
+
+.nav_button_group .button {
+    font-size: 18px;
+    padding: 8px 12px;
+}  
+
+.search_table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.search_table thead {
+    background-color: #042B59;
+    color: white;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.search_table th, .search_table td {
+    border-bottom: 1px solid #ccc;
+    padding: 12px 10px;
+    text-align: left;
+}
+
+.search_table tbody{
+    background-color: #f1f1f1;
+}
+
+.search_table th:not(:last-child),
+.search_table td:not(:last-child) {
+    border-right: 1px solid #ccc;
+}
+
+.search_table tbody tr:nth-child(even) {
+    background-color: #fafafa;
+}
+
+.filter-section {
+    display: flex;
+    align-items: flex-start;
+    gap: 440px;
+    padding: 20px 0;
+}
+
+.search-input {
+    padding: 14px 16px;
+    font-size: 16px;
+    width: 400px;
+}
+
+.dropdown-group {
+    display: flex;
+    gap: 0;
+}
+
+.filter {
+    display: flex;
+    margin-right: 10px;
+}
+
+.dropdown {
+    padding: 14px 16px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+/*----------------------------------*/
+/* Create Account Page Styles */
+/*----------------------------------*/
+
+.create_account_page {
+    background-color: #042B59;
+    margin: 0;
+    padding: 0;
+}
+
+.create_account_page h1 {
+    background-color: #027DFD;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    border-bottom: 8px solid white;
+    margin: 0;
+    font-size: 36px;
+}
+
+.create_account_page input {
+    display: block;
+    margin: 20px auto;
+    padding: 18px;
+    font-size: 22px;
+    width: 400px;
+}
+
+.input_group {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    align-items: center;
+}
+
+.flash.danger {
+    text-align: center;
+    color: red;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+/*----------------------------------*/
+/* Login Page Styles */
+/*----------------------------------*/
+
+.login_page {
+    background-color: #042B59;
+    margin: 0;
+    padding: 0;
+}
+
+.login_page h1 {
+    background-color: #027DFD;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    border-bottom: 8px solid white;
+    margin: 0;
+    font-size: 36px;
+}
+
+.login_page input {
+    display: block;
+    margin: 20px auto;
+    padding: 18px;
+    font-size: 22px;
+    width: 400px;
+}
+
+.input_group {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    align-items: center;
+}
+
+
+/*----------------------------------*/
+/* Project Page Styles */
+/*----------------------------------*/
+
+.projects_page {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    background-color: #042B59; 
+    flex-direction: column; 
+    text-align: center; 
+}
+
+th, td {
+    padding: 5px;
+    border: 2px solid black;
+    font-family: Arial, sans-serif;
+    color: #027DFD;
+}
+
+tbody tr:hover {
+    background-color: #114379; 
+}
+
+a {
+    font-family: Arial, sans-serif;
+    color: #027DFD;
+}
+
+.projects_page h1 {
+    background-color: #042B59;
+    padding: 10px;
+    color: #027DFD;
+    text-align: center;
+    margin: 0;
+    font-size: 48px;
+}
+
+
+/*-------------------------------------------*/
+/* Projects details and upsert Page Styles */
+/*-------------------------------------------*/
+
+.projects_details_page {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    background-color: #042B59; 
+    flex-direction: column; 
+    text-align: center; 
+}
+
+th, td {
+    padding: 5px;
+    border: 2px solid black;
+    font-family: Arial, sans-serif;
+    color: #027DFD;
+}
+
+tbody tr:hover {
+    background-color: #114379; 
+}
+
+a {
+    font-family: Arial, sans-serif;
+    color: #027DFD;
+}
+
+.projects_details_page h1 {
+    background-color: #042B59;
+    padding: 5px;
+    color: #027DFD;
+    text-align: center;
+    margin: 0;
+    font-size: 48px;
+}
+
+.projects_details_page h2 {
+    background-color: #042B59;
+    padding: 5px;
+    color: white;
+    text-align: center;
+    margin: 0;
+    font-size: 25px;
+}
+
+.projects_details_page h3 {
+    background-color: #042B59;
+    padding: 5px;
+    color: white;
+    text-align: center;
+    margin: 0;
+    font-size: 18px;
+}
+
