--- a/app/templates/project_details_and_upsert.html
+++ b/app/templates/project_details_and_upsert.html
@@ -5,8 +5,8 @@
     <title>Project Details</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
-    <h1>Project Details</h1>
+<body class="projects_details_page">
+    <h1 class="projects_details_page h1">Project Details</h1>
 
     <!-- Gets and shows messages using flash.-->
     {% with messages = get_flashed_messages() %}
@@ -20,12 +20,15 @@
     {% endwith %}
 
     <!-- Displays the project's name, department and project number-->
+    <br>
     <h2>{{ project[1] }} (Dept: {{ project[2] }})</h2>
-    <p>Project Number: {{ project[0] }}</p>
+    <p style="color:#027DFD">Project Number: {{ project[0] }}</p>
 
     <!-- Displays a table with the assigned employees associated with that particular project (on this current webpage) -->
-    <h3>Assigned Employees</h3>
-    <table border="2">
+    <h3 class="projects_details_page h3">Assigned Employees</h3>
+    <br>
+    
+    <table>
         <thead>
             <tr>
                 <!-- Displays the SSN, Employee name and hours for the table-->
@@ -49,10 +52,13 @@
     </table>
 
     <!-- For the Upsert Hours Form -->
-    <h3>Add/Update Hours</h3>
+    <br><br>
+    <h3 class="projects_details_page h2">Add/Update Hours</h3>
     <form method="POST">
+    <br>
 
-        <label for="employee_id">Select Employee:</label>
+        <label for="employee_id" style="color:#027DFD">Select Employee:</label>
+        <br>
         <!-- To select a particular employee -->
         <select name="employee_id" id="employee_id">
             {% for emp in employees %}
@@ -60,11 +66,14 @@
             {% endfor %}
         </select>
 
-        <label for="hours">Hours:</label>
+        <br>
+        <label for="hours" style="color:#027DFD">Hours:</label>
+        <br>
         <!-- Lets users type a particular number of total hours  -->
         <input type="number" step="0.1" name="hours" id="hours" min="0">
 
         <!-- Update button -->
+        <br>
         <button type="submit">Update</button>
     </form>
 
@@ -74,6 +83,7 @@
     {% endif %}
 
     <!-- Goes back to the projects.html page -->
+    <br>
     <p><a href="{{ url_for('main.projects') }}">Back to Projects List</a></p>
 </body>
 </html>
