--- a/app/templates/project_details_and_upsert.html
+++ b/app/templates/project_details_and_upsert.html
@@ -27,7 +27,7 @@
     <!-- Displays a table with the assigned employees associated with that particular project (on this current webpage) -->
     <h3 class="projects_details_page h3">Assigned Employees</h3>
     <br>
-    
+
     <table>
         <thead>
             <tr>
@@ -59,7 +59,7 @@
 
         <label for="employee_id" style="color:#027DFD">Select Employee:</label>
         <br>
-        <!-- To select a particular employee -->
+        <!-- To select a specific employee -->
         <select name="employee_id" id="employee_id">
             {% for emp in employees %}
             <option value="{{ emp[0] }}">{{ emp[1] }} {{ emp[2] }}</option>
@@ -69,7 +69,7 @@
         <br>
         <label for="hours" style="color:#027DFD">Hours:</label>
         <br>
-        <!-- Lets users type a particular number of total hours  -->
+        <!-- Lets users type a specific number of total hours -->
         <input type="number" step="0.1" name="hours" id="hours" min="0">
 
         <!-- Update button -->
@@ -84,6 +84,8 @@
 
     <!-- Goes back to the projects.html page -->
     <br>
-    <p><a href="{{ url_for('main.projects') }}">Back to Projects List</a></p>
+    <p>
+        <a href="{{ url_for('main.projects') }}">Back to Projects Portfolio Summary</a>
+    </p>
 </body>
 </html>
