--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -12,8 +12,7 @@
             <h1 class="search_header">Home</h1>
             <div class="nav_button_group">
                 <a href="{{ url_for('main.search') }}" class="button">Home</a>
-                <a href="#" class="button">A3</a>
-                <a href="#" class="button">A4</a>
+                <a href="{{ url_for('main.projects) }}" class="button">Projects</a>
                 <a href="#" class="button">A5</a>
                 <a href="#" class="button">A6</a>
                 <a href="{{ url_for('main.logout') }}" class="button">Logout</a>
