Done, may need to refactor button names

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -14,8 +14,8 @@
                 <a href="{{ url_for('main.search') }}" class="button">Home</a>
                 <a href="#" class="button">A3</a>
                 <a href="#" class="button">A4</a>
-                <a href="#" class="button">A5</a>
-                <a href="#" class="button">A6</a>
+                <a href="{{ url_for('main.employee_list') }}" class="button">Employee Management</a>
+                <a href="{{ url_for('main.managers_overview') }}" class="button">Manager Overview</a>
                 <a href="{{ url_for('main.logout') }}" class="button">Logout</a>
             </div>
         </div>
