--- a/app/templates/project_details_and_upsert.html
+++ b/app/templates/project_details_and_upsert.html
@@ -5,9 +5,9 @@
     <title>Project Details</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body class="projects_details_page">
-    <h1 class="projects_details_page h1">Project Details</h1>
-
+<body class="create_account_page">
+    <h1>{{ project[1] }} (Dept: {{ project[2] }}, No: {{ project[0] }})</h1>
+    
     <!-- Gets and shows messages using flash.-->
     {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -19,16 +19,10 @@
         {% endif %}
     {% endwith %}
 
-    <!-- Displays the project's name, department and project number-->
-    <br>
-    <h2>{{ project[1] }} (Dept: {{ project[2] }})</h2>
-    <p style="color:#027DFD">Project Number: {{ project[0] }}</p>
-
     <!-- Displays a table with the assigned employees associated with that particular project (on this current webpage) -->
-    <h3 class="projects_details_page h3">Assigned Employees</h3>
-    <br>
+    <h2>Assigned Employees:</h2>
 
-    <table>
+    <table class="table table--alt">
         <thead>
             <tr>
                 <!-- Displays the SSN, Employee name and hours for the table-->
@@ -52,29 +46,35 @@
     </table>
 
     <!-- For the Upsert Hours Form -->
-    <br><br>
-    <h3 class="projects_details_page h2">Add/Update Hours</h3>
+    <br><hr><br>
+    <h2>Add/Update Hours:</h2>
     <form method="POST">
     <br>
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <label for="employee_id" style="text-align: center; color: white; font-size: 20px; font-weight: bold;">Select Employee:</label>
+        </div>
+        <div class="filter-section-projects">
+            <br>
+            <!-- To select a specific employee -->
+            <select name="employee_id" id="employee_id" class="dropdown">
+                {% for emp in employees %}
+                <option value="{{ emp[0] }}">{{ emp[1] }} {{ emp[2] }}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-        <label for="employee_id" style="color:#027DFD">Select Employee:</label>
-        <br>
-        <!-- To select a specific employee -->
-        <select name="employee_id" id="employee_id">
-            {% for emp in employees %}
-            <option value="{{ emp[0] }}">{{ emp[1] }} {{ emp[2] }}</option>
-            {% endfor %}
-        </select>
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <label for="hours" style="text-align: center; color: white; font-size: 20px; font-weight: bold;">Hours:</label>
+        </div>
 
-        <br>
-        <label for="hours" style="color:#027DFD">Hours:</label>
-        <br>
         <!-- Lets users type a specific number of total hours -->
         <input type="number" step="0.1" name="hours" id="hours" min="0">
 
         <!-- Update button -->
         <br>
-        <button type="submit">Update</button>
+        <p>
+            <a onclick="event.preventDefault(); this.closest('form').submit();" class="button">Update</a>
+        </p>
     </form>
 
     {% if message %}
@@ -83,9 +83,9 @@
     {% endif %}
 
     <!-- Goes back to the projects.html page -->
-    <br>
+    <hr><br>
     <p>
-        <a href="{{ url_for('main.projects') }}">Back to Projects Portfolio Summary</a>
+        <a href="{{ url_for('main.projects') }}" class="button">Back to Projects Portfolio Summary</a>
     </p>
 </body>
 </html>
