--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -6,14 +6,13 @@
     <title>Employee Search</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body class="search_page">
+<body class="page">
     <header>
-        <div class="search_header_div">
-            <h1 class="search_header">Home</h1>
+        <div class="header_div">
+            <h1 class="header">Home</h1>
             <div class="nav_button_group">
                 <a href="{{ url_for('main.search') }}" class="button">Home</a>
-                <a href="#" class="button">A3</a>
-                <a href="#" class="button">A4</a>
+                <a href="{{ url_for('main.projects') }}" class="button">Projects</a>
                 <a href="{{ url_for('main.employee_list') }}" class="button">Employee Management</a>
                 <a href="{{ url_for('main.managers_overview') }}" class="button">Manager Overview</a>
                 <a href="{{ url_for('main.logout') }}" class="button">Logout</a>
@@ -61,7 +60,7 @@
             </form>
         </div>
 
-        <table class="search_table">
+        <table class="table">
             <thead>
                 <tr>
                     <th>Name</th>
